--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "learning tensorflow js",
+  "short_name": "Tensorflow.js practice",
   "name": "learning tensorflow js",
   "icons": [
     {
