--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/makannew/tensorflow-js-practice",
+  "homepage": "https://makannew.github.io/tensorflow-js-practice/",
   "name": "tensorflow-js-practice",
   "version": "0.1.0",
   "private": true,
