--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs": "^2.3.0",
     "@tensorflow/tfjs-layers": "^2.3.0",
     "@tensorflow/tfjs-vis": "^1.4.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -11,7 +12,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "use-delayed-function": "^1.0.0",
+    "use-linked-state": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
